# hypo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: conf.py
docs/source/api/: geometric_objects.rst  output_objects.rst
docs/source/examples/: index.rst
docs/source/introductions/: installation.md  introduction.md
examples/: Biconic_lens.ipynb  Biconic_lens_HDPE.ipynb  Biconic_lens_silicon.ipynb  HDPE_SimpleLens.ipynb
examples/AR_LIB_new/: AR_perfect.h5  Ideal_AR.h5
src/: HDPE_polar_1_layer_AR_study_plots_v2_10dBET.ipynb
src/AR_LIB/: HDPE_ARC2.h5  HDPE_ARC_onegroove.h5  HDPE_ARC_v1.h5  leaning_groove_AR.h5  no_AR.h5  normal_groove_AR_test.h5  produce_Ideal_AR.ipynb  produce_no_AR.ipynb
src/HDPE_LENS_srf/srf_plano_convex/: lens1_f1.rsf  lens1_plano.rsf  lens2_plano.rsf
src/hypo/: Aperture_Filter.py  BeamPattern.py  EMtools.py  Feedpy.py  FresnelCoeff.py  Gauss_L_quadr.py  Lenspo.py  POpyGPU.py  POpyGPUx.py  RWcur.py  Spheical_field.py  __init__.py  antiReflection.py  coordinate.py  coxvec.py  dielectric_film.py  field_io.py  field_storage.py  interface_rt.py  lenspy.py  ready_code.txt  rim.py  srf_zemax_fnc.py  surface.py  transform.py  vecops.py  zernike_torch.py
src/hypo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/twolenspy/: HDPE_PO_points.h5  HDPE_lens.py  HDPE_lens_10dBET.py  HDPE_lens_zernike.py
src/twolenspy/srf_plano_convex/: lens2_f1.rsf
