[project]
name = "hypo"
version = "0.0.0"
description = "Physical optics analysis for mm and submm optical systems. The code can be used to analyze reflectors and refractive optics with Anti-reflection coating. It also allows to use NVIDIA CUDA acceleration."
authors = [
    {name = "Xiaodong Ren"}
]
license = {text = "\"MIT\""}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (>=1.26.4)",
    "scipy (>=1.7)",
    "matplotlib (>=3.5)",
    "torch (>=2.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
