[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypo"
version = "0.0.0"
description = "Physical optics package for lens and reflector antenna simulations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "xiaodongrenpmo@gmail.com" }
]
keywords = ["physical optics", "antenna", "lens", "electromagnetics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.23,<2",
    "scipy==1.13.1",
    "matplotlib==3.9.2",
    "tqdm",
    "h5py==3.12.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
    "sphinx",
    "myst-parser",
    "furo"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]